[MessageLoop] Disable hi-res timers while in nested loops that don't process application tasks

(also disable "on idle" metrics in that state as they pertain to pending
delayed tasks and don't make sense when those are intentionally being
ignored)

R=danakj@chromium.org, kylechar@chromium.org

Bug: 854237
Change-Id: I8b2201c8d8c3508878fcf7b5fef6b0ea7e857ba3
Reviewed-on: https://chromium-review.googlesource.com/1106434
Reviewed-by: danakj <danakj@chromium.org>
Reviewed-by: kylechar <kylechar@chromium.org>
Commit-Queue: Gabriel Charette <gab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572626}
Former-commit-id: 623e3241cee548d0200492a43451fa5cfa9ccd62